<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.a007_court_counter.MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        android:src="@drawable/bg" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/team"
                android:text="@string/host" />

            <TextView
                android:id="@+id/team_a_score"
                style="@style/score"
                android:text="0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/touchDown_scoreA"
                        style="@style/button_score_left"
                        android:text="0" />

                    <TextView
                        android:id="@+id/fieldGoal_scoreA"
                        style="@style/button_score_left"
                        android:text="0" />

                    <TextView
                        android:id="@+id/extraPoint_scoreA"
                        style="@style/button_score_left"
                        android:text="0" />

                    <TextView
                        android:id="@+id/twoPointConversion_scoreA"
                        style="@style/button_score_left"
                        android:text="0" />

                    <TextView
                        android:id="@+id/safety_scoreA"
                        style="@style/button_score_left"
                        android:text="0" />

                    <TextView
                        android:id="@+id/conversionSafety_scoreA"
                        style="@style/button_score_left"
                        android:text="0" />

                    <TextView
                        android:id="@+id/defensiveConversion_scoreA"
                        style="@style/button_score_left"
                        android:text="0" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/touchDown_scoreA_button"
                        style="@style/button"
                        android:onClick="multiClicker"
                        android:text="@string/touchdown" />

                    <Button
                        android:id="@+id/fieldGoal_scoreA_button"
                        style="@style/button"
                        android:onClick="multiClicker"
                        android:text="@string/field_goal" />

                    <Button
                        android:id="@+id/extraPoint_scoreA_button"
                        style="@style/button"
                        android:onClick="multiClicker"
                        android:text="@string/extra_point" />

                    <Button
                        android:id="@+id/twoPointConversion_scoreA_button"
                        style="@style/button"
                        android:onClick="multiClicker"
                        android:text="@string/two_point_conversion" />

                    <Button
                        android:id="@+id/safety_scoreA_button"
                        style="@style/button"
                        android:onClick="multiClicker"
                        android:text="@string/safety" />

                    <Button
                        android:id="@+id/conversionSafety_scoreA_button"
                        style="@style/button"
                        android:onClick="multiClicker"
                        android:text="@string/conversion_safety" />

                    <Button
                        android:id="@+id/defensiveConversion_scoreA_button"
                        style="@style/button"
                        android:onClick="multiClicker"
                        android:text="@string/defensive_conversion" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@style/team"
                android:text="@string/guest" />

            <TextView
                android:id="@+id/team_b_score"
                style="@style/score"
                android:text="0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/touchDown_scoreB_button"
                        style="@style/button"
                        android:onClick="multiClicker"
                        android:text="@string/touchdown" />

                    <Button
                        android:id="@+id/fieldGoal_scoreB_button"
                        style="@style/button"
                        android:onClick="multiClicker"
                        android:text="@string/field_goal" />

                    <Button
                        android:id="@+id/extraPoint_scoreB_button"
                        style="@style/button"
                        android:onClick="multiClicker"
                        android:text="@string/extra_point" />

                    <Button
                        android:id="@+id/twoPointConversion_scoreB_button"
                        style="@style/button"
                        android:onClick="multiClicker"
                        android:text="@string/two_point_conversion" />

                    <Button
                        android:id="@+id/safety_scoreB_button"
                        style="@style/button"
                        android:onClick="multiClicker"
                        android:text="@string/safety" />

                    <Button
                        android:id="@+id/conversionSafety_scoreB_button"
                        style="@style/button"
                        android:onClick="multiClicker"
                        android:text="@string/conversion_safety" />

                    <Button
                        android:id="@+id/defensiveConversion_scoreB_button"
                        style="@style/button"
                        android:onClick="multiClicker"
                        android:text="@string/defensive_conversion" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/touchDown_scoreB"
                        style="@style/button_score_right"
                        android:text="0" />

                    <TextView
                        android:id="@+id/fieldGoal_scoreB"
                        style="@style/button_score_right"
                        android:text="0" />

                    <TextView
                        android:id="@+id/extraPoint_scoreB"
                        style="@style/button_score_right"
                        android:text="0" />

                    <TextView
                        android:id="@+id/twoPointConversion_scoreB"
                        style="@style/button_score_right"
                        android:text="0" />

                    <TextView
                        android:id="@+id/safety_scoreB"
                        style="@style/button_score_right"
                        android:text="0" />

                    <TextView
                        android:id="@+id/conversionSafety_scoreB"
                        style="@style/button_score_right"
                        android:text="0" />

                    <TextView
                        android:id="@+id/defensiveConversion_scoreB"
                        style="@style/button_score_right"
                        android:text="0" />


                </LinearLayout>

            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="1dp"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:background="#464646" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp"
        android:background="#464646" />

    <Button
        android:id="@+id/reset_button"
        style="@style/button_bottom"
        android:layout_centerHorizontal="true"
        android:onClick="multiClicker"
        android:text="@string/reset" />

</RelativeLayout>
